Fix mermaid graph overflow problem

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -213,6 +213,10 @@ li > ol {
   @apply mt-0 rounded-t-none;
 }
 
+.article .mermaid {
+  @apply overflow-x-auto;
+}
+
 pre[class*="language-"] {
   @apply rounded-t rounded-b;
 }
